@@ -1,4 +1,8 @@
 2008-09-03
+	* configure.ac,src/Makefile.am: link pam_krb5.so with libpam unless
+	explicitly disabled at compile-time (#227097,#460998)
+
+2008-09-03
 	* src/options.c (option_b): if the realm name given to us is NULL,
 	don't bother consulting the appdefaults
 	* src/options.c (_pam_krb5_options_init): check for the "debug" flag
